fix: tools bg dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+  --tools-bg: rgba(255, 255, 255, 0.9);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -67,6 +67,7 @@ a:hover {
   --border: 1px solid #333;
   color: var(--foreground);
   --modal-overlay: rgba(255, 255, 255, 0.1);
+  --tools-bg: rgba(0, 0, 0, 0.9);
 }
 
 
@@ -92,7 +93,7 @@ button {
     left: 50%;
     transform: translateX(-50%);
     top: 10px;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: var(--tools-bg);
     max-width: 90%;
     overflow-x: auto;
   }
